# pli2cells

./: .gitattributes  .gitignore  .gitmodules  LICENSE.txt  README.md  setup.cfg
.datalad/: .gitattributes  config
configs/: train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: cyto_affine.yaml
configs/debug/: small_scale.yaml
configs/experiment/: unetdftstyle_affine.yaml  wgan_affine.yaml
configs/experiment/affine/: equi1.yaml  equi2.yaml  equi3.yaml  equi4.yaml  noequi1.yaml  noequi2.yaml  noequi3.yaml  noequi4.yaml  noreg_equi1.yaml  noreg_equi2.yaml  noreg_equi3.yaml  noreg_equi4.yaml  noreg_noequi1.yaml  noreg_noequi2.yaml  noreg_noequi3.yaml  noreg_noequi4.yaml  style0.yaml  style05.yaml  style1.yaml  style3.yaml  style4.yaml  style5.yaml  style7.yaml  styleonly.yaml  unetdftstyle_affine_260.yaml  unetdftstyle_affine_270.yaml  unetdftstyle_affine_280.yaml  unetdftstyle_affine_300.yaml  unetdftstyle_affine_320.yaml  unetdftstyle_affine_360.yaml  unetdftstyle_affine_360_bipc.yaml  unetdftstyle_affine_360_bipchann.yaml  unetdftstyle_affine_360_cc.yaml  unetdftstyle_affine_360_pc.yaml  unetdftstyle_affine_360_pchann.yaml  unetdftstyle_affine_400.yaml  unetdftstyle_affine_460.yaml  unetdftstyle_affine_500.yaml
configs/experiment/wgan/: no_registration_0.yaml  no_registration_1.yaml  no_registration_2.yaml  no_registration_3.yaml  no_registration_equi_0.yaml  no_registration_equi_1.yaml  no_registration_equi_2.yaml  no_registration_equi_3.yaml  with_registration_0.yaml  with_registration_1.yaml  with_registration_2.yaml  with_registration_3.yaml  with_registration_no_equi_0.yaml  with_registration_no_equi_1.yaml  with_registration_no_equi_2.yaml  with_registration_no_equi_3.yaml  with_registration_no_equi_4.yaml
configs/model/: unetdftstyle.yaml  wgan.yaml
configs/trainer/: default.yaml
logs/: .gitignore
scripts/: apply_model.py  apply_models.sbatch  debug.sbatch  train.py  train.sbatch
src/pli_cyto/: training_pipeline.py
src/pli_cyto/datamodules/: aligned.py
src/pli_cyto/datamodules/components/: sections.py
src/pli_cyto/eval/: __init__.py  cpn.py  metrics.py  plot.py
src/pli_cyto/models/: dft_style.py  dft_wgan.py
src/pli_cyto/models/components/: discriminator.py  distributed.py  generator.py  style.py
src/pli_cyto/utils/: __init__.py  files.py  functions.py  loss.py
