# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = pli_cyto
description = Virtuak Cresyl violet staining from 3D-PLI.
author = Alexander Oberstrass
author_email = a.oberstrass@fz-juelich.de
license = Apache Software License 2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://jugit.fz-juelich.de/
# Add here related links, for example:
project_urls =
#    Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8,<=3.10

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    black           # code formatting
    flake8          # code analysis
    hydra-colorlog>=1.1.0

    # --------- hydra --------- #
    hydra-core>=1.1.0
    hydra-optuna-sweeper>=1.1.0
    isort           # import sorting

    # --------- loggers --------- #
    tensorboard

    # --------- linters --------- #
    pre-commit      # hooks for applying linters on commit
    pudb            # debugger
    pytest          # tests

    # --------- others --------- #
    python-dotenv   # loading env variables from .env file
    omegaconf
    numpy
    pandas
    pytorch-lightning==1.7.2
    rich            # beautiful text formatting in terminal
    sh              # for running bash commands in some tests
    dvc             # data version control
    # --------- pytorch --------- #
    torch>=1.11.0
    torchmetrics>=0.7.0
    torchvision>=0.12.0

    # --------- GiLab ----------- #
    pli-transforms @ git+https://jugit.fz-juelich.de/inm-1/bda/software/data_processing/pli-transforms.git
    pli-io @ git+https://jugit.fz-juelich.de/aoberstrass/pli/pli-io.git
    pli-styles @ git+https://jugit.fz-juelich.de/inm-1/bda/software/data_processing/pli-styles.git
    atlaslib @ git+https://jugit.fz-juelich.de/inm-1/bda/software/analysis/atlas/atlaslib.git
    atlasmpi @ git+https://jugit.fz-juelich.de/inm-1/bda/software/analysis/atlas/atlasmpi.git
    dms @ git+https://jugit.fz-juelich.de/inm-1/bda/software/infrastructure/dms.git


[options.packages.find]
where = src
exclude =
    tests


[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    E501  # Line too long
exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*
    .tox
    build
    dist
    .eggs
    docs/conf.py


[isort]
line_length = 99
profile = black
filter_files = True


[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = pli_cyto
extensions =
    dsproject
    no_skeleton
    pre_commit
